--- a/index.html
+++ b/index.html
@@ -53,22 +53,21 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="#about">About us</a>
               </li>                                     
               <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="#service">Gallery</a>
               </li> 
               <li class="nav-item">
-                <a class="nav-link" href="#">Testimonial</a>
+                <a class="nav-link" href="#portfolio">Blogs</a>
               </li>
-            </li> 
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blogs</a>
-            </li>
-           </li> 
+              <li class="nav-item">
+                <a class="nav-link" href="#team">Testimonial</a>
+              </li>
              <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
            </li>
+           </ul>
            </div>
         </div>
       </nav>
@@ -96,7 +95,7 @@
 <!-- banner part html end  -->
 
 <!-- about part html start -->
-   <section id="about">
+   <section id="about" class="py-4">
     <div class="container">
     <!-- common heading html start  -->
           <div class="row">
@@ -125,7 +124,7 @@
 <!-- about part html end-->
 
 <!-- service part html start  -->
-<section id="service">
+<section id="service" class="py-4">
         <div class="container">
    <!-- common heading html start  -->
        <div class="row">
@@ -147,6 +146,7 @@
             <div class="service_contain">
               <h4>Graphic Design</h4>
               <p>Lorem ipsum dolor sit amet, consectetpisg elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+               <p> Sint delectus eius dicta mollitia quam quidem laboriosam, corrupti dignissimos vitae, dolorem unde?</p>
             </div>
            </div>
           </div>
@@ -154,26 +154,28 @@
             <div class="service_main">
              <div class="ser_icon_main">
                <div class="ser_icon">
-                 <img src="images/icon1.png" alt="">
+                 <img src="images/icon2.png" alt="">
                </div>
              </div>
              <div class="service_contain">
-               <h4>Graphic Design</h4>
+               <h4>Web Design</h4>
                <p>Lorem ipsum dolor sit amet, consectetpisg elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-             </div>
+               <p> Sint delectus eius dicta mollitia quam quidem laboriosam, corrupti dignissimos vitae, dolorem unde?</p>
+              </div>
             </div>
            </div>
            <div class="col-md-4">
             <div class="service_main">
              <div class="ser_icon_main">
                <div class="ser_icon">
-                 <img src="images/icon1.png" alt="">
+                 <img src="images/icon3.png" alt="">
                </div>
              </div>
              <div class="service_contain">
-               <h4>Graphic Design</h4>
+               <h4>Web Development</h4>
                <p>Lorem ipsum dolor sit amet, consectetpisg elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-             </div>
+               <p> Sint delectus eius dicta mollitia quam quidem laboriosam, corrupti dignissimos vitae, dolorem unde?</p>
+              </div>
             </div>
            </div>
          </div>
@@ -183,7 +185,7 @@
 
 <!-- portfolio part html start-->
   <!-- service part html start  -->
-  <section id="portfolio">
+  <section id="portfolio" class="mt-4">
         <div class="container">
     <!-- common heading html start  -->
        <div class="row">
@@ -428,6 +430,7 @@
      </section>
   <!-- Testimonial part html end  -->
 <!-- footer part html start -->
+<section id="contact">
   <footer>
         <div class="container">
           <div class="row">
@@ -546,7 +549,7 @@
               <div class="row">
                 <div class="col-md-4">
                   <div class="f_img">
-                    <img src="images/footer-img-01.jpg" class="img-fluid w-100" alt="">
+                    <img src="images/footer-img-02.jpg" class="img-fluid w-100" alt="">
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -556,7 +559,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="f_img">
-                    <img src="images/footer-img-01.jpg" class="img-fluid w-100" alt="">
+                    <img src="images/footer-img-02.jpg" class="img-fluid w-100" alt="">
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -566,7 +569,7 @@
                 </div>
                 <div class="col-md-4">
                   <div class="f_img">
-                    <img src="images/footer-img-01.jpg" class="img-fluid w-100" alt="">
+                    <img src="images/footer-img-02.jpg" class="img-fluid w-100" alt="">
                   </div>
                 </div>
                 <div class="col-md-4">
@@ -584,7 +587,7 @@
         <div class="l_footer">
            <p>Copyright  2023. All rights reserved by Md Somrat Islam</p>
           </div>
-       
+        </section>   
 <!-- footer part html end  -->
 
     <!-- js link start -->
